crates/shell-syntax/tests/snapshots/complete_tests__complete_after_pipe.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "grep",
        display: "grep",
        kind: Command,
        replace_start: 5,
        replace_end: 8,
    },
]
