crates/shell-syntax/tests/snapshots/complete_tests__complete_builtin.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completion
---
Some(
    Completion {
        text: "echo",
        display: "echo",
        kind: Builtin,
        replace_start: 0,
        replace_end: 3,
    },
)
