crates/shell-syntax/tests/snapshots/complete_tests__complete_command_single_match.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completion
---
Some(
    Completion {
        text: "cargo",
        display: "cargo",
        kind: Command,
        replace_start: 0,
        replace_end: 4,
        is_partial: false,
    },
)
