crates/shell-syntax/tests/snapshots/complete_tests__complete_cursor_mid_word.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "cargo",
        display: "cargo",
        kind: Command,
        replace_start: 0,
        replace_end: 5,
        is_partial: false,
    },
]
