crates/shell-syntax/tests/snapshots/complete_tests__complete_directory.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "folder/",
        display: "folder/",
        kind: Directory,
        replace_start: 3,
        replace_end: 5,
        is_partial: false,
    },
]
