crates/shell-syntax/tests/snapshots/complete_tests__complete_env_var_multiple_matches.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "$HOME",
        display: "HOME",
        kind: EnvVar,
        replace_start: 6,
        replace_end: 8,
        is_partial: false,
    },
    Completion {
        text: "$HOSTNAME",
        display: "HOSTNAME",
        kind: EnvVar,
        replace_start: 6,
        replace_end: 8,
        is_partial: false,
    },
]
