crates/shell-syntax/tests/snapshots/complete_tests__complete_env_var_single_match.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "$PATH",
        display: "PATH",
        kind: EnvVar,
        replace_start: 6,
        replace_end: 8,
    },
]
