crates/shell-syntax/tests/snapshots/complete_tests__complete_file.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "file.txt",
        display: "file.txt",
        kind: File,
        replace_start: 4,
        replace_end: 6,
    },
]
