crates/shell-syntax/tests/snapshots/complete_tests__complete_flag.snap
---
source: crates/shell-syntax/tests/complete_tests.rs
expression: completions
---
[
    Completion {
        text: "--help",
        display: "--help",
        kind: Flag,
        replace_start: 4,
        replace_end: 8,
        is_partial: false,
    },
]
